--- a/.github/workflows/mainn.yml
+++ b/.github/workflows/mainn.yml
@@ -29,6 +29,32 @@ jobs:
         name: bandit-findings
         path: bandit-report.json
 
+
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
   image_scan:
     name: Build Image and Ran Image Scan
     runs-on: ubuntu-latest
@@ -49,6 +75,9 @@ jobs:
       run: |
         curl -fsSl https://raw.githubusercontent.com/docker/scout-cli/main/install.sh -o install-scout.sh
         sh install-scout.sh
+
+        echo ${{ secrets.REPO_PWD }} | docker login -u ${{ secrets.REPO_USER }} --password-stdin
+        
         docker scout quickview
         docker scout cves
 
